# prelegal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json
.claude/skills/cerebras/: SKILL.md
backend/: pyproject.toml
backend/app/: db.py  documents.py  documents_router.py  main.py  nda_chat.py  schemas.py
backend/app/auth/: deps.py  router.py  security.py
backend/app/chat/: engine.py  field_spec.py  intake.py  orchestrate.py  registry.py
backend/app/chat/specs/: __init__.py  ai_addendum.py  baa.py  csa.py  design_partner_agreement.py  dpa.py  mutual_nda.py  partnership_agreement.py  pilot_agreement.py  psa.py  sla.py  software_license_agreement.py
backend/tests/: conftest.py  test_auth.py  test_chat_endpoint.py  test_documents.py  test_main.py  test_nda_chat.py  test_nda_chat_endpoint.py
backend/tests/chat/: test_engine.py  test_intake.py  test_orchestrate.py  test_registry.py
frontend/: MANUAL_TESTING.md  next.config.ts  package-lock.json  package.json
frontend/__tests__/app/: page.test.tsx
frontend/__tests__/components/: DocumentPreview.test.tsx  (+7 more)
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DocumentPdfDocument.tsx  DocumentPreview.tsx  DraftChat.tsx  MndaForm.tsx  MndaPdfDocument.tsx  MndaPreview.tsx  NdaChat.tsx  Sidebar.tsx
frontend/lib/: api-error.ts  auth-client.ts  chat-client.ts  documents-client.ts  mnda-content.ts  nda-chat-client.ts  noto-sans-font-data.ts  pdf-fonts.ts
scripts/: start-mac.sh  start-windows.ps1  stop-windows.ps1
templates/: LICENSE.txt  PSA.md
(+31 files in other folders)
