[project]
name = "backend"
version = "0.1.0"
description = "Prelegal API server"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.0",
    "fastapi>=0.118.0",
    "litellm>=1.91.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.9.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
